# exam_itmo

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
bot/: __init__.py  handlers.py  llm_parser.py  main.py  voice.py
gym/: __init__.py  cli.py  db.py  models.py  parser.py
gym_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  conftest.py
tests/features/: add_exercise.feature  max_weight.feature  telegram_voice.feature  view_today.feature
tests/step_defs/: test_add_exercise.py  test_max_weight.py  test_telegram_voice.py  test_view_today.py
