[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gym-cli"
version = "0.1.0"
description = "CLI дневник тренировок с Telegram ботом и голосовым вводом"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "aiogram>=3.0",
    "openai>=1.0",
    "pydub>=0.25",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-bdd>=6.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
gym = "gym.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
bdd_features_base_dir = "tests/features"
